# bluecolor

./: Cargo.toml  README.md
src/: data.rs  device.rs  main.rs  output.rs  server.rs  tui.rs
